k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-lab
  labels:
    name: home-lab
    environment: production
